# EmbarcaTechHudsonSena

./: README.md  power.c  test.c
projetos pi pico w/: Tarefa6.1.rar  mentoria04_02_2025.rar
projetos pi pico w/JoystickTeste/: CMakeLists.txt
projetos pi pico w/SemaforoDisplayOled/: CMakeLists.txt  SemaforoDisplayOled.c
projetos pi pico w/SistemaControleSinaisTransitoCruzamento/: CMakeLists.txt  SistemaControleSinaisTransitoCruzamento.c
projetos pi pico w/Tarefa6.1/: CMakeLists.txt  Tarefa6.1.c
projetos pi pico w/TemAliIdeal/: CMakeLists.txt  TemAliIdeal.c
projetos pi pico w/TempIdeal/: CMakeLists.txt  TempIdeal.c
projetos pi pico w/TemperaturaSena/: CMakeLists.txt
projetos pi pico w/TemperaturaSenaOficial/: CMakeLists.txt  TemperaturaSenaOficial.c  ws2812.pio
projetos pi pico w/TemperaturaSenaOficial/Joystick/: joystick.c  joystick.h
projetos pi pico w/Teste01/: CMakeLists.txt  Teste01.c
projetos pi pico w/Teste02/: CMakeLists.txt
projetos pi pico w/TesteMatrixLed/: CMakeLists.txt  TesteMatrixLed.c
projetos pi pico w/buzzer_pwm1/: CMakeLists.txt
projetos pi pico w/joystick_led_class/: CMakeLists.txt
projetos pi pico w/mentoria04_02_2025/: CMakeLists.txt  mentoria04_02_2025.c
projetos pi pico w/mentoria04_02_2025/buzzer/: buzzer.c  buzzer.h
projetos pi pico w/pwm_Led_0/: CMakeLists.txt  pwm_Led_0.c
projetos pi pico w/tarefa6.2/: CMakeLists.txt  tarefa6.2.c
projetos pi pico w/temIdealAli/: CMakeLists.txt  temIdealAli.c
projetos pi pico w/teste/: CMakeLists.txt
projetos pi pico w/wifi_led/: CMakeLists.txt  wifi_led.c
(+2 files in other folders)
